<resources>
    <string name="app_name">Education Tracking App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_email">Student Email: %s</string>
    <string name="teacher_email">Teacher Email: %s</string>
    <string name="answer">Answer: %s</string>
    <string name="grade_value">Grade: %s</string>
    <string name="attached_file">Attached File: %s</string>
    <string name="edit_answer">Edit Answer</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="delete_confirmation">Are you sure you want to delete the answer by %s?</string>
    <string name="yes">Yes</string>
    <string name="task_upload_date_string">Task Upload Date: %s</string>
    <string name="enter_grade">Enter Grade for %s</string>
    <string name="grade_hint">Enter grade (0-100)</string>
    <string name="submit">Submit</string>
    <string name="upload_date">Upload Date: %s</string>
    <string name="finish_date">Finish Date: %s</string>
    <string name="student_answer">Student Answer: %s</string>
    <string name="evaluation">Evaluation: %s / 100</string>
    <string name="description">Description: %s</string>
    <string name="file_load_failed">Failed to load file</string>
    <string name="no_suitable_app">No suitable app to open this file</string>
    <string name="empty_answer_error">Answer cannot be empty</string>
    <string name="update_failed">Update failed</string>
    <string name="answer_updated">Answer updated!</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="delete_failed">Delete failed</string>
    <string name="grade_updated">Grade updated successfully!</string>
    <string name="invalid_grade">Please enter a valid grade between 0 and 100</string>
    <string name="send_report">Send Report via Email</string>
    <string name="report_success">Report generated and sent successfully!</string>
    <string name="pdf_failed">Failed to generate PDF: %s</string>
    <string name="teacher_email_label">Teacher Email: %s</string>
    <string name="teacher_email_description">Email of the teacher who assigned the task</string>
    <string name="upload_date_label">📅 Upload Date: %s</string>
    <string name="upload_date_description">Date the task was uploaded</string>
    <string name="finish_date_label">⏰ Finish Date: %s</string>
    <string name="finish_date_description">Deadline for the task</string>
    <string name="target_class_label">Primary - 5</string>
    <string name="target_class_description">Target class for the task</string>
    <string name="task_image_description">Image related to the task</string>
    <string name="task_description_description">Description of the task</string>
    <string name="submit_answer_label">Submit Answer</string>
    <string name="submit_answer_description">Button to submit the task answer</string>
    <string name="dialog_title">Your Answer</string>
    <string name="dialog_title_description">Dialog title for submitting or viewing task answer</string>
    <string name="answer_hint">Answer</string>
    <string name="file_name_description">Name of the attached file</string>
    <string name="edit_button_label">Edit</string>
    <string name="edit_button_description">Button to edit the answer</string>
    <string name="close_button_label">Close</string>
    <string name="close_button_description">Button to close the dialog</string>
    <string name="edit_comment_label">Edit Comment</string>
    <string name="edit_comment_title_description">Title for editing task comment</string>
    <string name="edit_comment_hint">Enter task description...</string>
    <string name="edit_comment_description">Text field for task description</string>
    <string name="edit_finish_date_label">Edit Finish Date</string>
    <string name="edit_finish_date_title_description">Title for editing task finish date</string>
    <string name="edit_finish_date_hint">Select finish date...</string>
    <string name="edit_finish_date_description">Text field for selecting task finish date</string>
    <string name="answer_info_title">Answer Info</string>
    <string name="answer_info_title_description">Title for answer information section</string>
    <string name="student_email_label">Student Email: %s</string>
    <string name="student_email_description">Email of the student who submitted the answer</string>
    <string name="options_menu_description">Options menu for answer</string>
    <string name="answer_text_label">Answer: %s</string>
    <string name="answer_text_description">Text of the submitted answer</string>
    <string name="answer_image_description">Image submitted with the answer</string>
    <string name="attached_file_label">Attached File: %s</string>
    <string name="attached_file_description">Name of the attached file</string>
    <string name="submission_date_label">Date: %s</string>
    <string name="submission_date_description">Submission date of the answer</string>
    <string name="task_info_title">Task Info</string>
    <string name="task_info_title_description">Title for task information section</string>
    <string name="task_description_label">Task Description:</string>
    <string name="task_description_title_description">Title for task description</string>
    <string name="task_description_text">%s</string>
    <string name="task_description_text_description">Description of the task</string>
    <string name="grade_info_title">Grade Info</string>
    <string name="grade_info_title_description">Title for grade information section</string>
    <string name="grade_value_label">Grade: %s</string>
    <string name="grade_value_description">Grade assigned to the answer</string>
    <string name="grade_progress_label">%d/100</string>
    <string name="grade_progress_description">Progress of the grade out of 100</string>
    <string name="evaluate_answer_label">Evaluate Answer</string>
    <string name="evaluate_answer_description">Button to evaluate the submitted answer</string>

    <string name="teacher_info_title">Teacher Info</string>
    <string name="teacher_info_title_description">Title for teacher information section</string>

    <string name="answer_upload_date_label">Upload Date: %s</string>
    <string name="answer_upload_date_description">Date the answer was uploaded</string>
    <string name="student_answer_label">Student Answer: %s</string>
    <string name="student_answer_description">Text of the students answer</string>

    <string name="send_report_label">Send as Report PDF</string>
    <string name="send_report_description">Button to send the task details as a PDF report</string>
    <string name="cancel_label">Cancel</string>
    <string name="cancel_description">Button to close the dialog</string>


</resources>